<resources>
    <string name="app_name">Chats System</string>
    <string name="hello">Wellcome to Chat System</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="name">UserName:</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sing_up">Don\'t have an account? Sing up</string>
    <string name="create_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirm_pass">Confirm Password:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
